# hs-bibi

./: Bibi.cabal
Text/: Bibi.hs
bibi/: Biberon.hs  Bibi.hs
